# ElasticQuestions-support

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh
__test__/: test_hello.py
baml_client/: async_client.py  async_request.py  inlinedbaml.py  partial_types.py  sync_client.py  sync_request.py  type_builder.py  types.py
baml_src/: elastic.baml  generators.baml
generations/: .gitignore  example.md
src/elasticGPT/: GenQuestionFromFile.py  QueryGenerator.py
src/elasticGPT/baml_client/: async_client.py  async_request.py  inlinedbaml.py  parser.py  partial_types.py  stream_types.py  sync_client.py  sync_request.py  type_builder.py  type_map.py  types.py
src/elasticGPT/utils/: helpers.py
